# carpe-platform

./: .gitignore  .npmrc  MIGRATION_PNPM.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
iot-golang/: Makefile  README.md  TESTING.md  go.mod  main.go
iot-golang/core/: dependencies.go  state.go
iot-golang/core/device/: setup_device_test.go
iot-golang/core/device/commands/: setup_device_command.go
iot-golang/core/device/gateways/: config_gateway.go
iot-golang/core/device/gateways/infra/: fake_config._gateway.go
iot-golang/core/device/generators/infra/: fake_device_id_generator.go
iot-golang/core/device/routing/: event_router.go
iot-rust/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  libtest_refcell.rlib  protocol.md
iot-rust/.cargo/: config.toml
iot-rust/src/: lib.rs  main.rs
iot-rust/src/core/: mod.rs
iot-rust/src/core/device/: mod.rs
iot-rust/src/core/device/commands/: events.rs  mod.rs  setup_device_command.rs
iot-rust/src/core/device/gateways/: config_storage.rs  device_id_generator.rs  mock_config_storage.rs  mock_device_id_generator.rs  mod.rs
iot-rust/src/core/device/gateways/infra/: mock_config_storage.rs  mock_device_id_generator.rs  mod.rs
iot-rust/src/core/device/tests/: boot_device.rs  mod.rs
iot-rust/src/core/device/usecases/: boot_device_usecase.rs  mod.rs
iot-rust/src/core/runtime/: command_handler.rs  dependencies.rs  mod.rs  runtime.rs  state.rs
iot-rust/src/core/runtime/events/: event_queue.rs  events.rs  mod.rs  test_event_queue.rs
