[package]
edition      = "2024"
name         = "iot-rust"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "iot-rust"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "log-04"], optional = true }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"], optional = true }
log                    = { version = "0.4.27", optional = true }

critical-section = { version = "1.2.0", optional = true }
esp-println      = { version = "0.16.1", features = ["esp32", "log-04"], optional = true }
heapless = "0.9.2"

[features]
default = ["esp32"]
esp32 = ["esp-hal", "esp-bootloader-esp-idf", "log", "critical-section", "esp-println"]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
