[package]
edition      = "2024"
name         = "iot-rust"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "iot-rust"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "log-04"], optional = true }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"], optional = true }
log                    = { version = "0.4.27", optional = true }

critical-section = { version = "1.2.0", optional = true }
esp-println      = { version = "0.16.1", features = ["esp32", "log-04"], optional = true }
heapless = "0.9.2"
# futures nécessite alloc pour no_std
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
linked_list_allocator = { version = "0.10", optional = true }
# Écran OLED SSD1306
ssd1306 = { version = "0.10", default-features = false, features = ["graphics"], optional = true }
embedded-graphics = { version = "0.8", optional = true }
embedded-hal = { version = "1.0", optional = true }

[features]
default = ["esp32"]
esp32 = ["esp-hal", "esp-bootloader-esp-idf", "log", "critical-section", "esp-println", "linked_list_allocator", "ssd1306", "embedded-graphics", "embedded-hal"]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[dev-dependencies]
futures-executor = "0.3.31"
